--- a/frontend/our-app/src/components/FooterStyles.css
+++ b/frontend/our-app/src/components/FooterStyles.css
@@ -1,7 +1,7 @@
 .footer{
     width: 100%;
     padding: 3rem 0;
-    background-color: rgba(19, 19, 19, 0.8);
+    background-color: lightgray;
 }
 
 .footer-container{
