--- a/frontend/our-app/src/components/FooterStyles.css
+++ b/frontend/our-app/src/components/FooterStyles.css
@@ -5,7 +5,7 @@
 }
 
 .footer-container {
-    max-width: 1140px;
+    max-width: 100%;
     margin: auto;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
