--- a/frontend/our-app/src/index.css
+++ b/frontend/our-app/src/index.css
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&family=Love+Ya+Like+A+Sister&display=swap');
 *{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Libre Franklin", sans-serif;
+  font-size: large;
+  font-family: "Love Ya Like A Sister", cursive;
+  letter-spacing: 0.125rem;
 }
 
