--- a/frontend/our-app/src/components/NavbarStyles.css
+++ b/frontend/our-app/src/components/NavbarStyles.css
@@ -5,6 +5,7 @@
     height: 10vh; /* Full viewport height for proper vertical centering */
     padding: 0.5rem;
 }
+
 .nav-menu{
     display:flex;
 }
@@ -16,6 +17,9 @@
 .nav-menu li a{
     font-size: 1.2rem;
     font-weight: 500;
+}
 
+.logo {
+    
 }
 
